# obs-remote

./: .editorconfig  .gitignore  .protolint.yml  Cargo.toml  Vagrantfile  buf.yaml  deny.toml  rust-toolchain.toml
.devcontainer/: Dockerfile  bootstrap.sh  devcontainer.json
.github/workflows/: ci.yml
crates/api/: Cargo.toml  build.rs
crates/api-legacy/: Cargo.toml  build.rs
crates/api-legacy/proto/: common.proto  events.proto  general.proto  json.proto  media_control.proto  outputs.proto  profiles.proto  recording.proto  replay_buffer.proto  scene_collections.proto  scene_items.proto  scenes.proto  sources.proto  streaming.proto  studio_mode.proto  transitions.proto  virtual_cam.proto
crates/api-legacy/src/: common.rs  general.rs  lib.rs  media_control.rs  outputs.rs  profiles.rs  recording.rs  replay_buffer.rs  scene_collections.rs  scene_items.rs  scenes.rs  sources.rs  streaming.rs  studio_mode.rs  transitions.rs  virtual_cam.rs
crates/api-legacy/src/events/: filters.rs  global.rs  mod.rs  sources.rs  transitions.rs
crates/api/proto/: config.proto  filters.proto  general.proto  hotkeys.proto  outputs.proto  profiles.proto  projectors.proto  replay_buffer.proto  streaming.proto  transitions.proto
crates/api/src/: config.rs  events.rs  filters.rs  general.rs  hotkeys.rs  inputs.rs  lib.rs  media_inputs.rs  outputs.rs  profiles.rs  projectors.rs  recording.rs  replay_buffer.rs  scene_collections.rs  scene_items.rs  scenes.rs  sources.rs  streaming.rs  transitions.rs  util.rs  virtual_cam.rs
crates/libobs-sys/: Cargo.toml  build.rs
crates/libobs-sys/src/: lib.rs
crates/obs/: Cargo.toml
crates/obs-client/: Cargo.toml  build.rs
crates/obs-client/src/: main.rs
crates/obs-gradient-sourcer/: Cargo.toml
crates/obs-gradient-sourcer/src/: lib.rs
crates/obs-remote/: Cargo.toml
crates/obs-remote-apiv4/: Cargo.toml  build.rs
crates/obs-remote-apiv4/proto/: json.proto  sources.proto  virtual_cam.proto
crates/obs-remote-apiv4/src/: recording.rs  replay_buffer.rs  scene_items.rs  scenes.rs  sources.rs  streaming.rs  transitions.rs  virtual_cam.rs
crates/obs-remote-apiv5/: Cargo.toml
crates/obs-remote-apiv5/proto/: config.proto  filters.proto  (+8 more)
crates/obs-remote/src/: lib.rs
crates/obs-rust/: Cargo.toml
crates/obs-rust/src/: lib.rs
crates/obs/src/: audio.rs  config.rs  data.rs  encoder.rs  filter.rs  gs.rs  hotkeys.rs  lib.rs  logger.rs  module.rs  os.rs  output.rs  properties.rs  register.rs  scene.rs  service.rs  signal.rs  source.rs  util.rs  video.rs
crates/obs/src/callback/: calldata.rs  mod.rs  proc.rs  signal.rs
crates/obs/src/frontend/: events.rs  mod.rs  profiles.rs  recording.rs  replay_buffer.rs  scene_collections.rs  scenes.rs  tasks.rs  transitions.rs  virtualcam.rs
crates/obs/src/graphics/: quat.rs
crates/obs/src/graphics/matrix/: matrix3.rs  mod.rs
crates/obs/src/graphics/vec/: mod.rs  vec3.rs  vec4.rs
libobs-sys/: Cargo.toml  build.rs
libobs-sys/src/: lib.rs
obs/: Cargo.toml
obs-client/: Cargo.toml  build.rs
obs-client/src/: main.rs
obs-remote/: .editorconfig  COMPLETION_V4.md  COMPLETION_V5.md  Cargo.toml  build.rs
obs-remote-apiv4/: Cargo.toml  build.rs
obs-remote-apiv4/proto/: common.proto  events.proto  general.proto  outputs.proto  profiles.proto  scene_collections.proto
obs-remote-apiv4/src/: common.rs  events.rs  general.rs  lib.rs  media_control.rs  outputs.rs  profiles.rs  recording.rs  replay_buffer.rs  scene_collections.rs  scene_items.rs  scenes.rs  sources.rs  streaming.rs  studio_mode.rs  transitions.rs  virtual_cam.rs
obs-remote-apiv4/src/events/: filters.rs  global.rs  mod.rs  sources.rs  transitions.rs
obs-remote-apiv5/: Cargo.toml  build.rs
obs-remote-apiv5/proto/: config.proto  events.proto  general.proto  replay_buffer.proto  scene_collections.proto  scene_items.proto  streaming.proto  virtual_cam.proto
obs-remote-apiv5/src/: config.rs  filters.rs  general.rs  hotkeys.rs  inputs.rs  lib.rs  profiles.rs  projectors.rs  recording.rs  replay_buffer.rs  scene_collections.rs  scenes.rs  sources.rs  virtual_cam.rs
obs-remote/proto/: common.proto  events.proto  general.proto  json.proto  media_control.proto  outputs.proto  recording.proto  replay_buffer.proto  scene_items.proto  scenes.proto  sources.proto  streaming.proto  studio_mode.proto  transitions.proto  v5.proto
obs-remote/proto/v5/: events.proto  filters.proto  general.proto  hotkeys.proto  inputs.proto  media_inputs.proto  outputs.proto  profiles.proto  recording.proto  replay_buffer.proto  scene_collections.proto  scene_items.proto  scenes.proto  sources.proto  streaming.proto  transitions.proto  virtual_cam.proto
obs-remote/src/: lib.rs
obs-remote/src/obs_remote/: common.rs  events.rs  general.rs  media_control.rs  mod.rs  outputs.rs  profiles.rs  recording.rs  scene_collections.rs  scene_items.rs  scenes.rs  sources.rs  streaming.rs  studio_mode.rs  transitions.rs  v5.rs  virtual_cam.rs
obs-remote/src/obs_remote/v5/: events.rs  general.rs  hotkeys.rs  inputs.rs  media_inputs.rs  mod.rs  outputs.rs  profiles.rs  scene_collections.rs  scenes.rs  sources.rs  streaming.rs  transitions.rs  virtual_cam.rs
obs-rust/: Cargo.toml
obs-rust/src/: lib.rs
obs/src/: audio.rs  config.rs  data.rs  encoder.rs  gs.rs  hotkeys.rs  lib.rs  logger.rs  module.rs  output.rs  properties.rs  scene.rs  service.rs  signal.rs  source.rs  tracing.rs  video.rs
obs/src/frontend/: events.rs  mod.rs  preview_mode.rs  profiles.rs  recording.rs  replay_buffer.rs  scene_collections.rs  scenes.rs  streaming.rs  tasks.rs  transitions.rs  virtualcam.rs
obs/src/graphics/: axisang.rs  mod.rs  plane.rs  quat.rs
obs/src/graphics/matrix/: matrix3.rs  matrix4.rs
obs/src/graphics/vec/: mod.rs  vec2.rs  vec3.rs  vec4.rs
proto/: config.proto  events.proto  filters.proto  general.proto  hotkeys.proto  inputs.proto  media_inputs.proto  outputs.proto  profiles.proto  projectors.proto  recording.proto  replay_buffer.proto  scene_collections.proto  scene_items.proto  scenes.proto  sources.proto  streaming.proto  transitions.proto  virtual_cam.proto
(+31 files in other folders)
