[package]
name = "obs-client"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.42"
prost = "0.8.0"
prost-types = "0.8.0"
tokio = { version = "1.9.0", features = ["macros", "rt"] }
tonic = "0.5.0"

[build-dependencies]
tonic-build = "0.5.1"
