[package]
name = "obs-client"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.52"
prost = "0.9.0"
prost-types = "0.9.0"
tokio = { version = "1.15.0", features = ["macros", "rt"] }
tonic = { version = "0.6.2", features = ["compression"] }

[build-dependencies]
tonic-build = { version = "0.6.2", features = ["compression"] }
