[package]
name = "obs-remote-apiv4"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.52"
image = { version = "0.23.14", default-features = false, features = ["jpeg", "png"] }
log = "0.4.14"
obs = { path = "../obs" }
parking_lot = "0.11.2"
prost = "0.9.0"
prost-types = "0.9.0"
tokio = { version = "1.15.0", features = ["fs", "rt", "sync"] }
tokio-stream = { version = "0.1.8", default-features = false, features = ["sync"] }
tonic = "0.6.2"

[build-dependencies]
tonic-build = { version = "0.6.2", features = ["compression"] }
