[package]
name = "obs-remote-apiv5"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.42"
image = { version = "0.23.14", default-features = false, features = ["jpeg", "png"] }
log = "0.4.14"
obs = { path = "../obs" }
prost = "0.8.0"
prost-types = "0.8.0"
tokio = { version = "1.9.0", features = ["fs", "rt", "sync"] }
tokio-stream = { version = "0.1.7", default-features = false, features = ["sync"] }
tonic = "0.5.2"

[build-dependencies]
tonic-build = { version = "0.5.2", features = ["compression"] }
