[package]
name = "obs-remote-apiv5"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.43"
image = { version = "0.23.14", default-features = false, features = ["jpeg", "png"] }
log = "0.4.14"
obs = { path = "../obs" }
prost = "0.8.0"
prost-types = "0.8.0"
tokio = { version = "1.10.0", features = ["fs", "rt", "sync"] }
tokio-stream = { version = "0.1.7", default-features = false, features = ["sync"] }
tonic = "0.5.2"

[build-dependencies]
tonic-build = { version = "0.5.2", features = ["compression"] }
