[package]
name = "obs-remote"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2018"
description = "Remote control OBS with gRPC"
license = "AGPL-3.0-only"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.42"
image = { version = "0.23.14", default-features = false, features = ["jpeg", "png"] }
log = { version = "0.4.14", features = ["std", "max_level_debug"] }
obs = { path="../obs" }
prost = "0.8.0"
prost-types = "0.8.0"
tokio = { version = "1.8.1", features = ["macros", "rt", "sync"] }
tokio-stream = { version = "0.1.7", default-features = false, features = ["sync"] }
tonic = "0.5.0"
tonic-reflection = "0.2.0"

[build-dependencies]
tonic-build = "0.5.1"
