[package]
name = "obs"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.43"
bitflags = "1.3.2"
chrono = "0.4.19"
libobs-sys = { path = "../libobs-sys" }
log = { version = "0.4.14", features = ["std"] }
strum = { version = "0.21.0", features = ["derive"] }
