[package]
name = "obs"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-only"

[features]
default = []
tracing = ["tracing-subscriber"]

[dependencies]
anyhow = "1.0.52"
bitflags = "1.3.2"
chrono = "0.4.19"
libobs-sys = { path = "../libobs-sys" }
log = { version = "0.4.14", features = ["std"] }
strum = { version = "0.23.0", features = ["derive"] }
tracing-subscriber = { version = "0.3.5", default-features = false, features = ["fmt"], optional = true }
