[package]
name = "api-legacy"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.75"
image = { version = "0.24.7", default-features = false, features = ["jpeg", "png"] }
log = "0.4.20"
obs = { path = "../obs" }
parking_lot = "0.12.1"
prost = "0.12.2"
prost-types = "0.12.2"
tokio = { version = "1.34.0", features = ["fs", "rt", "sync"] }
tokio-stream = { version = "0.1.14", default-features = false, features = ["sync"] }
tonic = { version = "0.10.2", features = ["gzip"] }

[build-dependencies]
tonic-build = "0.10.2"
