[package]
name = "api-legacy"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.97"
image = { version = "0.25.6", default-features = false, features = ["jpeg", "png"] }
log = "0.4.27"
obs = { path = "../obs" }
parking_lot = "0.12.3"
prost = "0.13.5"
prost-types = "0.13.5"
tokio = { version = "1.44.2", features = ["fs", "rt", "sync"] }
tokio-stream = { version = "0.1.17", default-features = false, features = ["sync"] }
tonic = { version = "0.13.0", features = ["gzip"] }

[build-dependencies]
protox = "0.8.0"
tonic-build = "0.13.0"
