[package]
name = "api"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.79"
image = { version = "0.24.8", default-features = false, features = ["jpeg", "png"] }
log = "0.4.20"
obs = { path = "../obs" }
prost = "0.12.3"
prost-types = "0.12.3"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["fs", "rt", "sync"] }
tokio-stream = { version = "0.1.14", default-features = false, features = ["sync"] }
tonic = { version = "0.10.2", features = ["gzip"] }

[build-dependencies]
tonic-build = "0.10.2"
