[package]
name = "api"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.94"
image = { version = "0.25.5", default-features = false, features = ["jpeg", "png"] }
log = "0.4.22"
obs = { path = "../obs" }
prost = "0.13.4"
prost-types = "0.13.4"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["fs", "rt", "sync"] }
tokio-stream = { version = "0.1.17", default-features = false, features = ["sync"] }
tonic = { version = "0.12.3", features = ["gzip"] }

[build-dependencies]
tonic-build = "0.12.3"
