[package]
name = "api"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.97"
image = { version = "0.25.5", default-features = false, features = ["jpeg", "png"] }
log = "0.4.26"
obs = { path = "../obs" }
prost = "0.13.5"
prost-types = "0.13.5"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["fs", "rt", "sync"] }
tokio-stream = { version = "0.1.17", default-features = false, features = ["sync"] }
tonic = { version = "0.12.3", features = ["gzip"] }

[build-dependencies]
protox = "0.7.2"
tonic-build = "0.12.3"
