[package]
name = "libobs-sys"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
build = "build.rs"
license = "AGPL-3.0-only"
links = "obs"

[dependencies]

[build-dependencies]
bindgen = "0.69.2"

[target.'cfg(all(unix, not(target_os = "macos")))'.build-dependencies]
pkg-config = "0.3.29"

[target.'cfg(windows)'.build-dependencies]
cc = "1.0.83"
regex = "1.10.3"
winreg = "0.52.0"
