[package]
name = "libobs-sys"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
build = "build.rs"
license = "AGPL-3.0-only"
links = "obs"

[dependencies]

[build-dependencies]
bindgen = "0.71.0"

[target.'cfg(all(unix, not(target_os = "macos")))'.build-dependencies]
pkg-config = "0.3.31"

[target.'cfg(windows)'.build-dependencies]
cc = "1.2.3"
regex = "1.11.1"
winreg = "0.52.0"
