[package]
name = "libobs-sys"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2024"
build = "build.rs"
license = "AGPL-3.0-only"
links = "obs"

[dependencies]

[build-dependencies]
bindgen = "0.71.1"

[target.'cfg(all(unix, not(target_os = "macos")))'.build-dependencies]
pkg-config = "0.3.32"

[target.'cfg(windows)'.build-dependencies]
cc = "1.2.16"
regex = "1.11.1"
winreg = "0.55.0"
