[package]
name = "obs-client"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.94"
prost = "0.13.4"
prost-types = "0.13.4"
tokio = { version = "1.42.0", features = ["macros", "rt"] }
tonic = { version = "0.12.3", features = ["gzip"] }

[build-dependencies]
protox = "0.7.1"
tonic-build = "0.12.3"
