[package]
name = "obs-client"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.97"
prost = "0.13.5"
prost-types = "0.13.5"
tokio = { version = "1.44.1", features = ["macros", "rt"] }
tonic = { version = "0.12.3", features = ["gzip"] }

[build-dependencies]
protox = "0.7.2"
tonic-build = "0.12.3"
