[package]
name = "obs-client"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2024"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.97"
prost = "0.13.5"
prost-types = "0.13.5"
tokio = { version = "1.44.2", features = ["macros", "rt"] }
tonic = { version = "0.13.0", features = ["gzip"] }

[build-dependencies]
protox = "0.8.0"
tonic-build = "0.13.0"
