[package]
name = "obs-gradient-sourcer"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2024"
license = "AGPL-3.0-only"
description = "Port of exeldro/obs-gradient-source for fun"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.22"
obs = { path = "../obs" }
