[package]
name = "obs-remote"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
description = "Remote control OBS with gRPC"
license = "AGPL-3.0-only"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.75"
api = { path = "../api" }
log = { version = "0.4.20", features = ["std", "max_level_debug"] }
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
obs = { path = "../obs" }
prost = "0.12.2"
prost-types = "0.12.2"
tokio = { version = "1.34.0", features = ["macros", "parking_lot", "rt", "sync"] }
tonic = { version = "0.10.2", features = ["gzip"] }
tonic-reflection = "0.10.2"
tonic-web = "0.10.2"
