[package]
name = "obs-remote"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2024"
description = "Remote control OBS with gRPC"
license = "AGPL-3.0-only"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.97"
api = { path = "../api" }
log = { version = "0.4.27", features = ["std", "max_level_debug"] }
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
obs = { path = "../obs" }
prost = "0.13.5"
prost-types = "0.13.5"
tokio = { version = "1.44.2", features = ["macros", "parking_lot", "rt", "sync"] }
tonic = { version = "0.13.0", features = ["gzip"] }
tonic-reflection = "0.13.0"
tonic-web = "0.13.0"
