[package]
name = "obs-rust"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"
description = "Sample OBS plugin to try out various APIs"

[lib]
crate-type = ["cdylib"]

[dependencies]
libobs-sys = { path = "../libobs-sys" }
log = "0.4.17"
obs = { path = "../obs", features = ["serde"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
