[package]
name = "obs-rust"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"
description = "Sample OBS plugin to try out various APIs"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.22"
obs = { path = "../obs", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
