[package]
name = "obs"
version = "0.1.0"
authors = ["Dominik Nakamura <dnaka91@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-only"

[features]
default = []
serde = ["dep:serde", "num-rational/serde", "serde?/derive", "time/serde-human-readable"]
tracing = ["dep:tracing-subscriber", "tracing-subscriber?/fmt"]

[dependencies]
anyhow = "1.0.79"
bitflags = { version = "2.4.2", features = ["serde"] }
libobs-sys = { path = "../libobs-sys" }
log = { version = "0.4.20", features = ["std"] }
num-rational = { version = "0.4.1", default-features = false }
serde = { version = "1.0.195", optional = true }
strum = { version = "0.25.0", features = ["derive"] }
time = "0.3.31"
tracing-subscriber = { version = "0.3.18", default-features = false, optional = true }
